Standardize usage of List.of